num_enum/tests/try_build/compile_fail/garbage_attributes.stderr
error: Invalid attribute: expected `default` or `alternatives`
 --> $DIR/garbage_attributes.rs:5:5
  |
5 |     #[num_enum(garbage)]
  |     ^
